--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/") format("truetype");
+  src: url("assets/") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url("/assets//fonts/Inter/Inter-VariableFont_opsz\,wght.ttf")
+  src: url("assets//fonts/Inter/Inter-VariableFont_opsz\,wght.ttf")
     format("truetype");
   font-weight: normal;
   font-style: normal;
@@ -14,7 +14,7 @@
 *,
 *::before,
 *::after {
-  font-family: "Poppins", monospace;
+  font-family: "Inter", monospace;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
